tests/baselines/reference/nullAssignedToUndefined.errors.txt
==== tests/cases/compiler/nullAssignedToUndefined.ts (1 errors) ====
    var x = undefined = null; // error
            ~~~~~~~~~
!!! error TS2011: Cannot convert 'any' to 'any'.
    var y: typeof undefined = null; // ok, widened